Styled quotes section and added content to about

--- a/index.html
+++ b/index.html
@@ -52,41 +52,14 @@
 					<div class="col-12 text-center">
 						<h1 class="display-4 font-weight-light">Infinity Yoga Studio</h1>
 						<p class="lead">Begin your practice today</p>
-						<p><button class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#" role="button" data-target=".bd-example-modal-lg">Learn More &raquo;</button>
+						<p><a class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#schedule" role="button" data-target=".bd-example-modal-lg">Class Schedule &raquo;</a>
 						</p>
-						<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
-							aria-labelledby="myLargeModalLabel" aria-hidden="true">
-							<div class="modal-dialog modal-lg" role="document">
-								<div class="modal-content">
-
-									<!--Contact Modal-->
-									<form>
-										<div class="container container-fluid">
-											<div class="form-group form-hover">
-												<label for="inputName1">Name</label>
-												<input type="text" class="form-control" id="inputName1" placeholder="Your Name">
-												<label for="inputName2">Phone Number</label>
-												<input type="text" class="form-control" id="inputName2" placeholder="555-555-5555">
-												<label for="inputEmail">Email</label>
-												<input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
-												<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-											</div>
-										</div>
-										<div class="form-group form-check">
-											<input type="checkbox" class="form-check-input" id="exampleCheck1">
-											<label class="form-check-label" for="exampleCheck1">I agree to be contacted by Infinity Yoga Studio</label>
-										</div>
-										<button type="submit" class="btn btn-primary">Submit</button>
-									</form>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- .jumbotron -->
+	<!--.jumbotron -->
 
 	<!--About-->
 	<div class="container container-fixed" id="about">
@@ -140,16 +113,18 @@
 				</div>
 			</div>
 		</section>
-		<!-- /.about -->
+		<!--/.about -->
 	</div>
 
 
-	<div class="container container-fixed">
+	<div class="container container-fluid">
 		<!-- Quotes -->
+        <div class="container container-fixed">
 		<section class="quotes">
 			<div class="row">
 				<div class="col-12 page header">
-					<h2 class="quotes-header">User Stories</h2>
+                <br>
+					<h2 class="quotes-header text-lg">User Stories</h2>
 					<hr class="block-divider block-divider--short block-divider--black">
 				</div>
 			</div>
@@ -158,7 +133,7 @@
 					<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
 					<div class="card-body">
 						<blockquote class="blockquote">
-							<p class="card-text text-small">Infinity Studio is the best! I can always find a class to
+							<p class="quotes-content">Infinity Studio is the best! I can always find a class to
 								attend
 								thanks
 								to
@@ -173,7 +148,7 @@
 					<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
 					<div class="card-body">
 						<blockquote class="blockquote">
-							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+							<p class="quotes-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
 								posuere
 								erat a ante.</p>
 							<footer class="blockquote-footer">Someone famous in
@@ -181,12 +156,11 @@
 						</blockquote>
 					</div>
 				</div>
-
 				<div class="card">
 					<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
 					<div class="card-body">
 						<blockquote class="blockquote">
-							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+							<p class="quotes-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
 								posuere
 								erat a ante.</p>
 							<footer class="blockquote-footer">Someone famous in
@@ -195,9 +169,11 @@
 					</div>
 				</div>
 			</div>
-		</section>
+            
+	</section>
 		<!-- .quotes-->
-	</div>
+</div>
+</div>
 	<br>
 	<!-- marketing feature -->
 
@@ -214,6 +190,6 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
-</body>
 
+</body>
 </html>
