--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 					<div class="col-12 text-center">
 						<h1 class="display-4 font-weight-light">Infinity Yoga Studio</h1>
 						<p class="lead">Begin your practice today</p>
-						<p><a class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#schedule" role="button" data-target=".bd-example-modal-lg">Class Schedule &raquo;</a>
+						<p><a class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#schedule"
+								role="button" data-target=".bd-example-modal-lg">Class Schedule &raquo;</a>
 						</p>
 					</div>
 				</div>
@@ -95,7 +96,9 @@
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
 							<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-							<p class="about-content"> Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
+							<p class="about-content"> Located in the heart of NYC, Infinity is the only place where you
+								can leave your stress outside while you inhale the love from the around you & exhale
+								that positive energy right back at them.</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
@@ -118,62 +121,64 @@
 
 
 	<div class="container container-fluid">
-<!-- Quotes -->
-        <div class="container container-fixed">
-		<section class="quotes">
-			<div class="row">
-				<div class="col-12 page header">
-                <br>
-					<h2 class="quotes-header text-lg">User Stories</h2>
-					<hr class="block-divider block-divider--short block-divider--black">
+		<!-- Quotes -->
+		<div class="container container-fixed">
+			<section class="quotes">
+				<div class="row">
+					<div class="col-12 page header">
+						<br>
+						<h2 class="quotes-header text-lg">User Stories</h2>
+						<hr class="block-divider block-divider--short block-divider--black">
+					</div>
 				</div>
-			</div>
-			<div class="card-deck">
-				<div class="card">
-					<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
-					<div class="card-body">
-						<blockquote class="blockquote">
-							<p class="quotes-content">Infinity Studio is the best! I can always find a class to
-								attend
-								thanks
-								to
-								their flexible schedule.</p>
-							<footer class="blockquote-footer">Sara
-								Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
-						</blockquote>
+				<div class="card-deck">
+					<div class="card">
+						<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
+						<div class="card-body">
+							<blockquote class="blockquote">
+								<p class="quotes-content">Infinity Studio is the best! I can always find a class to
+									attend
+									thanks
+									to
+									their flexible schedule.</p>
+								<footer class="blockquote-footer">Sara
+									Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
+							</blockquote>
+						</div>
+					</div>
+
+					<div class="card">
+						<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
+						<div class="card-body">
+							<blockquote class="blockquote">
+								<p class="quotes-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Integer
+									posuere
+									erat a ante.</p>
+								<footer class="blockquote-footer">Someone famous in
+									<cite title="Source Title">Source Title</cite></footer>
+							</blockquote>
+						</div>
+					</div>
+					<div class="card">
+						<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
+						<div class="card-body">
+							<blockquote class="blockquote">
+								<p class="quotes-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+									Integer
+									posuere
+									erat a ante.</p>
+								<footer class="blockquote-footer">Someone famous in
+									<cite title="Source Title">Source Title</cite></footer>
+							</blockquote>
+						</div>
 					</div>
 				</div>
 
-				<div class="card">
-					<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
-					<div class="card-body">
-						<blockquote class="blockquote">
-							<p class="quotes-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-								posuere
-								erat a ante.</p>
-							<footer class="blockquote-footer">Someone famous in
-								<cite title="Source Title">Source Title</cite></footer>
-						</blockquote>
-					</div>
-				</div>
-				<div class="card">
-					<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
-					<div class="card-body">
-						<blockquote class="blockquote">
-							<p class="quotes-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-								posuere
-								erat a ante.</p>
-							<footer class="blockquote-footer">Someone famous in
-								<cite title="Source Title">Source Title</cite></footer>
-						</blockquote>
-					</div>
-				</div>
-			</div>
-            
-	</section>
-		<!-- .quotes-->
-</div>
-</div>
+			</section>
+			<!-- .quotes-->
+		</div>
+	</div>
 	<br>
 
 
@@ -190,4 +195,5 @@
 	</script>
 
 </body>
+
 </html>
