Added display-4 component to about-content text

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 	<!--.jumbotron -->
 
 	<!--About-->
-	<div class="container container-fixed" id="about">
-		<section class="about">
+	<div class="container container-fixed">
+		<section class="about" id="about">
 			<div class="row">
 				<div class="col-12 section-header">
 					<h2 class="text-lg text-center section-header">About</h2>
@@ -90,7 +90,7 @@
 					<div class="flex-column col-12 col-md-6 col-lg-4">
 						<div class="about">
 							<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-							<p class="about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to
+							<p class="display-4 about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to
 								escape
 								the hustle & bustle of everyday life. Our class list includes Yin, Reiki and
 								Restorative, so
@@ -100,9 +100,7 @@
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
 							<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-							<p class="about-content"> Located in the heart of NYC, Infinity is the only place where you
-								can leave your stress outside while you inhale the love from the around you & exhale
-								that positive energy right back at them.</p>
+							<p class="display-4 about-content"> Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
@@ -110,11 +108,7 @@
 							<h3 class="about-header text-center"><i class="fas fa-infinity d-none d-sm-block"></i>
 								Infinity
 							</h3>
-							<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-								eiusmod
-								tempor incididunt
-								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<p class="display-4 about-content">Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
 						</div>
 					</div>
 				</div>
@@ -124,14 +118,12 @@
 	</div>
 
 
-	<div class="container container-fluid">
+	<div class="container container-fixed">
+    <section class="quotes">
 		<!-- Quotes -->
-		<div class="container container-fixed">
-			<section class="quotes">
 				<div class="row">
-					<div class="col-12 page header">
-						<br>
-						<h2 class="quotes-header text-lg">User Stories</h2>
+					<div class="col-12 section-header">
+						<h2 class="text-lg text-center section-header">Quotes</h2>
 						<hr class="block-divider block-divider--short block-divider--black">
 					</div>
 				</div>
@@ -178,13 +170,9 @@
 						</div>
 					</div>
 				</div>
-
 			</section>
 			<!-- .quotes-->
-		</div>
 	</div>
-	<br>
-
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -197,7 +185,6 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
-
 </body>
 
 </html>
