--- a/index.html
+++ b/index.html
@@ -105,9 +105,17 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-header text-center"><i class="fas fa-infinity d-none d-sm-block"></i>
-								Infinity
+							<h3 class="about-header text-center"><i class="fas fa-yin-yang d-none d-sm-block"></i>
+								Harmony
 							</h3>
+							<p class="display-4 about-content">With classes ranging from Yin (or "Restorative" Yoga) to Yang (a more active practice most commonly known as "Vinyasa"), Infinity Studo has all the tools needed to bring harmony & balance to your busy life. </p>
+						</div>
+					</div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="about">
+						<h3 class="about-header text-center"><i class="fas fa-infinity d-none d-sm-block"></i>
+								Infinity
+						</h3>
 							<p class="display-4 about-content">Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
 						</div>
 					</div>
