--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<div class="row">
 					<div class="flex-column col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+							<h3 class="about-header"><i class="fas fa-peace"></i><br>Peace</h3>
 							<p class="display-4 about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to
 								escape
 								the hustle & bustle of everyday life. Our class list includes Yin, Reiki and
@@ -99,24 +99,22 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+							<h3 class="about-header"><i class="fas fa-heart"></i><br>Love</h3>
 							<p class="display-4 about-content"> Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-header text-center"><i class="fas fa-yin-yang d-none d-sm-block"></i>
-								Harmony
+							<h3 class="about-header text-center"><i class="fas fa-yin-yang"></i><br>Harmony
 							</h3>
 							<p class="display-4 about-content">With classes ranging from Yin (or "Restorative" Yoga) to Yang (a more active practice most commonly known as "Vinyasa"), Infinity Studo has all the tools needed to bring harmony & balance to your busy life. </p>
 						</div>
 					</div>
                     <div class="col-12 col-md-6 col-lg-4">
                     <div class="about">
-						<h3 class="about-header text-center"><i class="fas fa-infinity d-none d-sm-block"></i>
-								Infinity
+						<h3 class="about-header text-align-center"><i class="fas fa-infinity"></i><br>Infinity
 						</h3>
-							<p class="display-4 about-content">Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
+							<p class="display-4 about-content text-align-center">Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
 						</div>
 					</div>
 				</div>
