Updated README.md with exisiting features

--- a/index.html
+++ b/index.html
@@ -99,13 +99,21 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-header"><i class="fas fa-heart"></i><br>Love</h3>
+							<div class="row text-align-center">
+                             <i class="fas fa-heart"></i>
+							</div>
+                            <div class="row">
+                            <h3 class="about-header">Love</h3>
+                            </div>
+                            <div class="row">
 							<p class="display-4 about-content"> Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
+                            </div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="about">
-							<h3 class="about-header text-center"><i class="fas fa-yin-yang"></i><br>Harmony
+							<h3 class="about-header text-center"><i class="fas fa-yin-yang"></i>
+                            Harmony
 							</h3>
 							<p class="display-4 about-content">With classes ranging from Yin (or "Restorative" Yoga) to Yang (a more active practice most commonly known as "Vinyasa"), Infinity Studo has all the tools needed to bring harmony & balance to your busy life. </p>
 						</div>
