--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 
 <head>
-<!-- -->
-	<meta charset="UTF-8">
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<!-- Font Awesome CDN -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+		integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+	<!-- Custom Stylesheet -->
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-	<title>Infinity</title>
+	<!-- Title -->
+	<title>Infinity Yoga | Sign up today and get 1 month of unlimited yoga!</title>
 </head>
+
 <!-- Body -->
 
 <body>
