Repaired syntax error in jumbotron

--- a/index.html
+++ b/index.html
@@ -19,102 +19,99 @@
 </head>
 
 <!-- Body -->
-
 <body>
 <!-- Header -->
-	<header>
-	<!-- Navbar -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
-			<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-        </button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Home<span class="sr-only">(current)</span>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#about">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#schedule">Schedule</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#contact">Contact</a>
-					</li>
-				</ul>
-                    <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-                </form>
-			</div>
+<header>
+<!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+		<a class="navbar-brand" href="#"><i class="fas fa-infinity"></i> Infinity</a>
+		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon">
+              </span>
+             </button>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item active">
+				<a class="nav-link" href="#">Home<span class="sr-only">(current)</span>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#about">About</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#schedule">Schedule</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#contact">Contact</a>
+			</li>
+		</ul>
+        <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+         </form>
+		</div>
 		</nav>
+    <!--./navbar-->
 	</header>
+<!--./header-->
 
-	<div class="contianer-fluid">
-		<!-- Jumbotron -->
-		<div class="jumbotron-overlay"></div>
-		<div class="jumbotron jumbotron-fluid">
-			<div class="container h-100">
-				<div class="row h-100 align-items-center">
-					<div class="col-12 text-center">
-						<h1 class="display-4 font-weight-light">Infinity Yoga Studio</h1>
-						<p class="lead">Begin your practice today</p>
-						<p><a class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#schedule"
-								role="button" data-target=".bd-example-modal-lg">Class Schedule &raquo;</a>
-						</p>
+<!-- Jumbotron Container-->
+<section class="jumbotron-container">
+<!--Jumbotron Overlay-->
+<div class="jumbotron-overlay"></div>
+<!--./jumbotron-overlay-->   
+	<div class="jumbotron jumbotron-fluid">
+        <div class="container h-100">
+			<div class="row h-100 align-items-center">
+				<div class="col-12 text-center">
+                <h1 class="display-4 font-weight-light">Infinity Yoga</h1>
+                 <p class="lead">Begin your practice today</p>
+				    <p><a class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#schedule" role="button" data-target=".bd-example-modal-lg">Class Schedule &raquo;</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!--.jumbotron -->
+</section>
+<!--./jumbotron-container-->
 
-	<!--About-->
-	<div class="container container-fixed">
-		<section class="about" id="about">
-			<div class="row">
-				<div class="col-12 section-header">
-					<h2 class="text-lg text-center section-header">About</h2>
-					<hr class="block-divider block-divider--short block-divider--black">
+<!--About-->
+<section class="about" id="about">
+<div class="container container-fixed">
+	<div class="row">
+		<div class="col-12 section-header">
+			<h2 class="text-lg text-center section-header">About</h2>
+			<hr class="block-divider block-divider--short block-divider--black">
+		</div>
+	</div>
+	<div class="row">
+		<div class="flex-column col-12">
+	</div>
+    <div class="flex-column col-12">
+    <p class="text-md-center font-weight-normal font-italic">
+    Peace, love & infinity since 2007.
+    </p>
+    </div>
+</div>
+<br>
+<div class="container container-fixed">
+	<div class="row">
+		<div class="flex-column col-12 col-md-6 col-lg-4">
+			<div class="about">
+				<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+				    <p class="display-4 about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to escape the hustle & bustle of everyday life. Our class list includes Yin, Reiki and Restorative, so you can finally feel at peace!</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="flex-column col-12">
-				</div>
-				<div class="flex-column col-12">
-					<p class="text-md-center font-weight-normal font-italic">
-						Peace, love & infinity since 2007.
-					</p>
-				</div>
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="about">
+			    <h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+				    <p class="display-4 about-content"> Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
 			</div>
-			<br>
-			<div class="container container-fixed">
-				<div class="row">
-					<div class="flex-column col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-							<p class="display-4 about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to
-								escape
-								the hustle & bustle of everyday life. Our class list includes Yin, Reiki and
-								Restorative, so
-								you can finally feel at peace!</p>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-							<p class="display-4 about-content"> Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="about">
-							<h3 class="about-header text-center"><i class="fas fa-yin-yang d-none d-sm-block"></i>
-								Harmony
-							</h3>
-							<p class="display-4 about-content">With classes ranging from Yin (or "Restorative" Yoga) to Yang (a more active practice most commonly known as "Vinyasa"), Infinity Studo has all the tools needed to bring harmony & balance to your busy life. </p>
+		</div>
+			<div class="col-12 col-md-6 col-lg-4">
+				<div class="about">
+				    <h3 class="about-header text-center"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
+					</h3>
+					<p class="display-4 about-content">With classes ranging from Yin (or "Restorative" Yoga) to Yang (a more active practice most commonly known as "Vinyasa"), Infinity Studo has all the tools needed to bring harmony & balance to your busy life. </p>
 						</div>
 					</div>
                     <div class="col-12 col-md-6 col-lg-4">
@@ -127,14 +124,13 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<!--/.about -->
-	</div>
+        </div>
+	</section>
+<!--/.about -->
 
-
-	<div class="container container-fixed">
-    <section class="quotes">
-		<!-- Quotes -->
+<!--Quotes-->
+<section class="quotes">
+    	<div class="container container-fixed">
 				<div class="row">
 					<div class="col-12 section-header">
 						<h2 class="text-lg text-center section-header">Quotes</h2>
@@ -184,9 +180,9 @@
 						</div>
 					</div>
 				</div>
-			</section>
-			<!-- .quotes-->
-	</div>
+            </div>
+        </section>
+<!-- .quotes-->
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
