Styled icons with hover effect and added media queries

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- Jumbotron Container-->
 <section class="jumbotron-container">
 <!--Jumbotron Overlay-->
-<div class="jumbotron-overlay"></div>
+<div class="jumbotron-overlay">&nbsp;</div>
 <!--./jumbotron-overlay-->   
 	<div class="jumbotron jumbotron-fluid">
         <div class="container h-100">
