Updated typography, revised about content

--- a/index.html
+++ b/index.html
@@ -76,42 +76,41 @@
 
 <!--About-->
 <section class="about" id="about">
-<div class="container container-fixed">
+<div class="container container-fluid">
 	<div class="row">
-		<div class="col-12 section-header">
-			<h2 class="text-lg text-center section-header">About</h2>
+		<div class="col-12 col-6">
+			<h2 class="section-header">About</h2>
 			<hr class="block-divider block-divider--short block-divider--black">
 		</div>
 	</div>
 	<div class="row">
 		<div class="flex-column col-12">
-	</div>
-    <div class="flex-column col-12">
-    <p class="text-md-center font-weight-normal font-italic">
-    Peace, love & infinity since 2007.
-    </p>
+		</div>
+		<div class="flex-column col-12">
+			<p class="text-md-center font-weight-normal"> We offer diverse classes, a flexible schedule and unbelievable yoga instructors to help you as you improve your practice. Located in the heart of NYC, Infinity is proud to provide a peaceful, loving environment for our members!
+			</p>
+		</div>
     </div>
-</div>
 <br>
 <div class="container container-fixed">
 	<div class="row">
 		<div class="flex-column col-12 col-md-6 col-lg-4">
 			<div class="about">
 				<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-				    <p class="display-4 about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to escape the hustle & bustle of everyday life. Our class list includes Yin, Reiki and Restorative, so you can finally feel at peace!</p>
+				    <p class="display-4 about-content">Infinity Yoga is the perfect place to escape the hustle & bustle of everyday life.</p>
 				</div>
 			</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="about">
 			    <h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-				    <p class="display-4 about-content"> Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
+				    <p class="display-4 about-content"> Leave your stress outside while you inhale love & exhale all the negative stuff.</p>
 			</div>
 		</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
 				    <h3 class="about-header text-center"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
 					</h3>
-					<p class="display-4 about-content">With classes ranging from Yin (or "Restorative" Yoga) to Yang (a more active practice most commonly known as "Vinyasa"), Infinity Studo has all the tools needed to bring harmony & balance to your busy life. </p>
+					<p class="display-4 about-content">Infinity Yoga has all the tools needed to bring harmony & balance to your busy life. </p>
 						</div>
 					</div>
                     <div class="col-12 col-md-6 col-lg-4">
@@ -184,8 +183,8 @@
         </section>
 <!-- .quotes-->
 
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
@@ -195,6 +194,6 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
-</body>
 
+</body>
 </html>
