Update about section content with padding and content

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="container container-fluid">
 	<div class="row">
 		<div class="col-12 col-6">
-			<h2 class="section-header">About</h2>
+			<h2 class="section-header">About Us</h2>
 			<hr class="block-divider block-divider--short block-divider--black">
 		</div>
 	</div>
@@ -92,6 +92,8 @@
 		</div>
     </div>
 <br>
+
+
 <div class="container container-fixed">
 	<div class="row">
 		<div class="flex-column col-12 col-md-6 col-lg-4">
@@ -108,24 +110,22 @@
 		</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-				    <h3 class="about-header text-center"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
+				    <h3 class="about-header"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
 					</h3>
-					<p class="display-4 about-content">Infinity Yoga has all the tools needed to bring harmony & balance to your busy life. </p>
+					<p class="display-4 about-content">Infinity has all the tools needed to bring harmony & balance into your life. </p>
 						</div>
 					</div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                    <div class="about">
-						<h3 class="about-header text-center"><i class="fas fa-infinity d-none d-sm-block"></i>
-								Infinity
-						</h3>
-							<p class="display-4 about-content">Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
-						</div>
-					</div>
+
 				</div>
 			</div>
         </div>
 	</section>
 <!--/.about -->
+
+
+
+
+
 
 <!--Quotes-->
 <section class="quotes">
