Removed extra content from about, styled h1 with text effects

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container h-100">
 			<div class="row h-100 align-items-center">
 				<div class="col-12 text-center">
-                <h1 class="display-4 font-weight-light">Infinity Yoga</h1>
+                <h1>Infinity</h1>
                  <p class="lead">Begin your practice today</p>
 				    <p><a class="btn btn-info btn-lg" type="button" data-toggle="modal" href="#schedule" role="button" data-target=".bd-example-modal-lg">Class Schedule &raquo;</a></p>
 					</div>
