Updated and styled about subsection

--- a/index.html
+++ b/index.html
@@ -91,15 +91,16 @@
 			</p>
 		</div>
     </div>
+
+<!--Why Infinity Container-->
+<div class="container-fluid text-center">
+    <h2 class="section-header">Why Infinity</h2>
 <br>
-
-
-<div class="container container-fixed">
 	<div class="row">
-		<div class="flex-column col-12 col-md-6 col-lg-4">
+		<div class="col-12 col-md-6 col-lg-4">
 			<div class="about">
 				<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-				    <p class="display-4 about-content">Infinity Yoga is the perfect place to escape the hustle & bustle of everyday life.</p>
+				    <p class="display-4 about-content">Infinity is the perfect place to escape the hustle & bustle of everyday life.</p>
 				</div>
 			</div>
 		<div class="col-12 col-md-6 col-lg-4">
@@ -112,18 +113,22 @@
 				<div class="about">
 				    <h3 class="about-header"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
 					</h3>
-					<p class="display-4 about-content">Infinity has all the tools needed to bring harmony & balance into your life. </p>
+					<p class="display-4 about-content">Yoga is the perfect way to bring harmony & balance into your life. </p>
 						</div>
 					</div>
-
 				</div>
+        <!--./why-infinity-container-->
 			</div>
         </div>
-	</section>
 <!--/.about -->
+</section>
+
+<!--Schedule-->
+<section class="schedule">
 
 
 
+</section>
 
 
 
