Updated & styled second row of icons

--- a/index.html
+++ b/index.html
@@ -91,40 +91,64 @@
 			</p>
 		</div>
     </div>
-
-<!--Why Infinity Container-->
-<div class="container-fluid text-center">
-    <h2 class="section-header">Why Infinity</h2>
-<br>
-	<div class="row">
-		<div class="col-12 col-md-6 col-lg-4">
-			<div class="about">
-				<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-				    <p class="display-4 about-content">Infinity is the perfect place to escape the hustle & bustle of everyday life.</p>
+    <!--Why Infinity Container-->
+	<div class="container-fluid text-center">
+		<h2 class="section-header">Why Infinity?</h2>
+		<br>
+        <div class="row">
+			<div class="col-12 col-md-6 col-lg-4">
+            <div class="about">
+					<h3 class="about-header"><i class="fas fa-brain d-none d-sm-block"></i>Mind</h3>
+					<p class="display-4 about-content">Yoga improves healthy brain function & increases clarity</p>
 				</div>
 			</div>
-		<div class="col-12 col-md-6 col-lg-4">
-			<div class="about">
-			    <h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-				    <p class="display-4 about-content"> Leave your stress outside while you inhale love & exhale all the negative stuff.</p>
+            <div class="col-12 col-md-6 col-lg-4">
+				<div class="about">
+					<h3 class="about-header"><i class="fas fa-fire-alt d-none d-sm-block"></i> Body</h3>
+					<p class="display-4 about-content">Burn calories with power vinyasa & pilates</p>
+				</div>
 			</div>
-		</div>
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
-				    <h3 class="about-header"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
+					<h3 class="about-header"><i class="fas fa-praying-hands d-none d-sm-block"></i> Spirit
 					</h3>
-					<p class="display-4 about-content">Yoga is the perfect way to bring harmony & balance into your life. </p>
-						</div>
-					</div>
+					<p class="display-4 about-content">Find your inner strength through meditation.
+					</p>
 				</div>
-        <!--./why-infinity-container-->
 			</div>
-        </div>
+
+		<div class="row">
+			<div class="col-12 col-md-6 col-lg-4">
+				<div class="about">
+					<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+					<p class="display-4 about-content">Forget all the stress and focus on you.
+                    </p>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4">
+				<div class="about">
+					<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+					<p class="display-4 about-content">Inhale love, exhale all the negative stuff.</p>
+				</div>
+			</div>
+			<div class="col-12 col-md-6 col-lg-4">
+				<div class="about">
+					<h3 class="about-header"><i class="fas fa-yin-yang d-none d-sm-block"></i>Harmony
+					</h3>
+					<p class="display-4 about-content">Bring harmony & balance into your life.
+					</p>
+				</div>
+			</div>
+		</div>
+    <!--./why-infinity-container-->
+	</div>
+</div>
 <!--/.about -->
 </section>
 
 <!--Schedule-->
 <section class="schedule">
+<div class=""
 
 
 
