Added & styled schedule section container

--- a/index.html
+++ b/index.html
@@ -116,13 +116,12 @@
 					</p>
 				</div>
 			</div>
-
 		<div class="row">
 			<div class="col-12 col-md-6 col-lg-4">
 				<div class="about">
 					<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
 					<p class="display-4 about-content">Forget all the stress and focus on you.
-                    </p>
+					</p>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4">
@@ -141,20 +140,26 @@
 			</div>
 		</div>
     <!--./why-infinity-container-->
-	</div>
-</div>
-<!--/.about -->
+    </div>
+  </div>
+ </div>
 </section>
+<!--/.about -->
 
 <!--Schedule-->
 <section class="schedule">
-<div class=""
-
-
-
+    <div class="container-fluid text-center bg-blue">
+        <h2>Our Schedule</h2>
+        <h4>We hope to see you soon!</h4>
+    <div class="row text-center">
+    <div class="col-12 col-md-6">
+    <div class="thumbnail">
+    
+    </div>
+    </div>
+    </div>
+    </div>
 </section>
-
-
 
 <!--Quotes-->
 <section class="quotes">
