--- a/index.html
+++ b/index.html
@@ -178,67 +178,39 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
+<!--Quotes Carousel-->
+<h2>What Our Members Say</h2>
+<div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+
+    <!--Indicators-->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active">
+        </li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!--Wrapper for slides-->
+	<div class="carousel-inner" role="listbox">
+		<div class="item active">
+        <h4>"Infinity yoga is the best! I feel happier and healthier than ever!"<br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span></h4>	
+	    </div>
+        <div class="item">
+        <h4>"Infinity yoga is the best! I feel happier and healthier than ever!"<br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span></h4>	
+	    </div>
+           <div class="item">
+        <h4>"Infinity yoga is the best! I feel happier and healthier than ever!"<br><span style="font-style:normal;">Octavia Bliss, Infinity Yoga Student</span></h4>	
+	    </div>
+	  </div>
+
+      <!--Left and right controls-->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide-to="prev">
+        
+     </div>
+   </div>
+ </div>
 </section>
 
-<br>
-
-<!--Quotes
-<section class="quotes">
-    	<div class="container container-fixed">
-				<div class="row">
-					<div class="col-12 section-header">
-						<h2 class="text-lg text-center section-header">Quotes</h2>
-						<hr class="block-divider block-divider--short block-divider--black">
-					</div>
-				</div>
-				<div class="card-deck">
-					<div class="card">
-						<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
-						<div class="card-body">
-							<blockquote class="blockquote">
-								<p class="quotes-content">Infinity Studio is the best! I can always find a class to
-									attend
-									thanks
-									to
-									their flexible schedule.</p>
-								<footer class="blockquote-footer">Sara
-									Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
-							</blockquote>
-						</div>
-					</div>
-
-					<div class="card">
-						<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
-						<div class="card-body">
-							<blockquote class="blockquote">
-								<p class="quotes-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-									Integer
-									posuere
-									erat a ante.</p>
-								<footer class="blockquote-footer">Someone famous in
-									<cite title="Source Title">Source Title</cite></footer>
-							</blockquote>
-						</div>
-					</div>
-					<div class="card">
-						<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
-						<div class="card-body">
-							<blockquote class="blockquote">
-								<p class="quotes-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-									Integer
-									posuere
-									erat a ante.</p>
-								<footer class="blockquote-footer">Someone famous in
-									<cite title="Source Title">Source Title</cite></footer>
-							</blockquote>
-						</div>
-					</div>
-				</div>
-            </div>
-        </section>
- .quotes-->
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
